# ros2-otlp

./: README.md
my_trace_pkg_cpp/: CMakeLists.txt  package.xml
my_trace_pkg_cpp/launch/: trace_publisher.launch.py
my_trace_pkg_cpp/src/: trace_publisher.cpp  trace_publisher_otlp.cpp
my_trace_pkg_py/: package.xml  setup.cfg  setup.py
my_trace_pkg_py/jaeger/: docker-compose.yml
my_trace_pkg_py/launch/: trace_publisher.launch.py
my_trace_pkg_py/my_trace_pkg_py/: trace_publisher.py
nav2_amcl/: CMakeLists.txt
nav2_amcl/include/nav2_amcl/: amcl_node.hpp
nav2_amcl/include/nav2_amcl/sensors/laser/: laser.hpp
nav2_amcl/src/: amcl_node.cpp
nav2_amcl/src/sensors/: CMakeLists.txt
nav2_amcl/src/sensors/laser/: laser.cpp  likelihood_field_model_prob.cpp
